@@ -1,8 +1,10 @@
 macdir-simple (4.0) UNRELEASED; urgency=medium
 
   * Add encrypt and descrypt routines to be used to store secrets.
+  * Correct display errors in user details and user dump pages.
+  * Correct error in adding group entry during user updates.
 
- -- Bill MacAllister <bill@ca-zephyr.org>  Fri, 06 Sep 2019 06:46:07 +0000
+ -- Bill MacAllister <bill@ca-zephyr.org>  Mon, 23 Dec 2019 09:18:51 +0000
 
 macdir-simple (3.8) unstable; urgency=medium
 
